src/style.scss
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

$font-stack: "Roboto", sans-serif;
$font-color-primary: rgb(250, 250, 250);
$font-color-secondary: rgb(211, 219, 221);
$font-color-red: rgb(255, 45, 64);
$font-color-blue: rgb(0, 187, 245);

$color-primary: rgb(23, 31, 40);
$color-secondary: rgb(2, 10, 20);
$color-blue: rgb(57, 74, 92);

html {
  height: -webkit-fill-available;
}

body {
  // height: 100vh;
  // min-height: 100vh;
  // min-height: -webkit-fill-available;

  width: 100vw;

  display: flex;
  flex-direction: column;
  align-items: center;

  font-family: $font-stack;
  color: $font-color-primary;
  background-color: $color-secondary;
}

// stuff for hiding / showing dynamic input field
.dynamicText,
.dynamicInput {
  order: 1;
}

.dynamicText.active {
  //display: none;
  svg {
    color: transparent;
  }
}

.dynamicInput {
  display: none;
}
.dynamicInput.active {
  display: inline-block;
}

.loader {
  position: fixed;
  z-index: 10;

  width: 100vw;
  height: 100vh;

  background-color: rgba(0, 0, 0, 0.7);

  display: none; // hidden by default, "flex" to show
  align-items: center;
  justify-content: center;

  .loaderIcon {
    width: 15rem;
    $color-sun: rgb(237, 201, 81);

    .sunny-body path {
      fill: $color-sun;
    }

    .sunny-long-ray {
      transform-origin: 50% 50%;
      animation: spin 9s linear infinite;
    }

    .sunny-long-ray path {
      fill: $color-sun;
    }

    .sunny-short-ray {
      transform-origin: 50% 50%;
      animation: spin 9s linear infinite;
    }

    .sunny-short-ray path {
      fill: $color-sun;
    }

    @keyframes spin {
      100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg);
      }
    }
  }
}

$sidebarTransition: left 0.4s ease;
.sidebar {
  z-index: 5;
  height: 100vh;
  width: 40vw;

  position: fixed;
  left: 0;
  transition: $sidebarTransition;

  display: flex;
  flex-direction: column;

  background-color: $color-primary;

  .credits {
    text-align: center;
    padding: 0.6rem;
    font-size: 0.6rem;

    display: flex;
    flex-direction: column;
    gap: 0.3rem;

    a {
      text-decoration: none;
      color: $font-color-blue;
    }
  }
}
.sidebar.hidden {
  left: -40vw;
  transition: $sidebarTransition;
}

button.burger {
  position: absolute;
  left: calc(5vw - 0.9rem);
  top: 0.6rem;

  width: 1.8rem;

  svg {
    color: $font-color-primary;
  }
  background: none;
  border: none;
}

header {
  flex: 0 0 auto;

  width: 100%;

  display: grid;
  grid-template-columns: 10vw auto 10vw;
  grid-template-rows: 3rem;
  justify-items: center;
  align-items: center;

  background-color: $color-primary;

  .city {
    grid-column: 2 / 3;
    grid-row: 1 / 2;

    font-size: 1.4rem;
    font-weight: 500;
  }

  input.search {
    grid-column: 2 / 3;
    grid-row: 1 / 2;

    width: 70vw;
    display: none; // hidden by default
    height: 2rem;
    padding: 0 0.6em;

    font-size: 1.4rem;
    font-weight: 400;
    color: $font-color-primary;
    background-color: $color-secondary;

    outline: none;
    border: 2px solid $font-color-blue;
    border-radius: 1rem;
  }

  button.search {
    grid-column: 3 / 4;
    width: 1.8rem;

    svg {
      color: $font-color-primary;
    }
    background: none;
    border: none;
  }
}

main {
  flex: 1 1 auto;
  width: 100%;

  display: grid;
  grid-template-columns: 1fr;
  justify-items: center;
  gap: 5vw;
  padding: 5vw;

  .dayTab {
    width: 100%;
    padding: 1rem;

    border-radius: 5px;

    .now {
      display: grid;
      grid-template-columns: 1fr 2fr 1fr;
      justify-items: center;
      align-items: center;

      img {
        height: 3rem;
        width: 3rem;
      }

      h1 {
        font-size: 4rem;
        font-weight: 700;
      }

      h2 {
        font-size: 1.3rem;
        font-weight: 400;
        color: $font-color-secondary;
      }
    }

    background-color: $color-primary;
  }

  .hourlyBreakdown {
    display: grid;

    .descriptions {
      display: grid;
      grid-template-columns: 1fr 2fr 1fr;
      grid-auto-columns: 1fr;
      grid-auto-flow: column;
      align-items: center;

      font-size: 0.7rem;
      color: $font-color-secondary;

      .temperature {
        justify-self: center;
      }
    }

    .data {
      display: grid;
      grid-template-columns: 1fr 1fr 1fr 1fr;
      grid-auto-columns: 1fr;
      grid-auto-flow: column;
      align-items: center;

      border-bottom: 1px solid $color-blue;

      .time {
        color: $font-color-secondary;
      }

      img {
        justify-self: center;
        width: 1.5rem;
      }

      .temperature {
        justify-self: center;
        color: $font-color-red;
      }

      .precipitation {
        color: $font-color-blue;
      }

      .wind {
        img {
          width: 1.5rem;

          // https://codepen.io/sosuke/pen/Pjoqqp
          filter: invert(99%) sepia(1%) saturate(2248%) hue-rotate(162deg)
            brightness(96%) contrast(80%);
        }
      }
    }

    .sun {
      display: grid;
      justify-items: center;
      grid-template-columns: 1fr 1fr;

      .sunriseSunset {
        display: grid;
        justify-items: center;
        align-items: center;

        p {
          justify-self: center;
          grid-column: 1 / 3;
        }

        img {
          grid-column: 1 / 2;
          width: 2rem;

          // https://codepen.io/sosuke/pen/Pjoqqp
          filter: invert(99%) sepia(1%) saturate(2248%) hue-rotate(162deg)
            brightness(96%) contrast(80%);
        }

        span {
          grid-column: 2 / 3;
        }
      }
    }
  }
}

